<resources>
    <string name="app_name">AOS_STUDY</string>
    <string name="nav_home">홈</string>
    <string name="nav_location">지역</string>
    <string name="nav_my_location">내주변</string>
    <string name="nav_heart">찜</string>
    <string name="nav_my_page">MY야놀자</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yanolja">yanolja</string>
    <string name="where_go">어디로 놀러갈까요?</string>
    <string name="trend"> NEW &amp; HOT</string>
    <string name="bus">고속버스</string>
    <string name="sale">오늘의 특가</string>
    <string name="weekly">위클리 인기 Top</string>
    <string name="weekly_many">지난주 구매 기반 인기 많은 순</string>
    <string name="won">1100원</string>
</resources>