<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/nav_home"/>
    <item
        android:id="@+id/nav_location"
        android:icon="@drawable/ic_baseline_location_on_24"
        android:title="@string/nav_location"/>
    <item
        android:id="@+id/nav_my_location"
        android:icon="@drawable/ic_baseline_mylocation_searching_24"
        android:title="@string/nav_my_location"/>
    <item
        android:id="@+id/nav_heart"
        android:icon="@drawable/ic_baseline_medical_services_24"
        android:title="@string/nav_heart"/>
    <item
        android:id="@+id/nav_my_page"
        android:icon="@drawable/ic_baseline_accessibility_new_24"
        android:title="@string/nav_my_page"/>

</menu>